working with new build tool

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "rollup --watch -c rollup.config.js",
     "build": "rollup -c rollup.config.js",
+    "build2": "byu-web-component-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,10 @@
   "homepage": "https://github.com/byuweb/byu-person-lookup#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
+    "@polymer/lit-element": "^0.5.1",
     "@skatejs/renderer-lit-html": "^0.2.0",
     "i": "^0.3.6",
-    "lit-html": "^0.7.1",
+    "lit-html": "^0.10.0",
     "npm": "^5.7.1",
     "rollup": "^0.57.1",
     "skatejs": "^5.1.1"
