--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
   },
   "devDependencies": {
     "@byuweb/byu-web-component-build": "^1.3.1"
+  },
+  "//": {
+    "a": "Make changes",
+    "b": "run: npm run build",
+    "c": "run: git commit -a",
+    "d": "add a tag: git tag -a v1.3.? -m 'comment'",
+    "e": "commit to git with tags: git push --follow-tags",
   }
 }
